<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/resgistrar"
        android:textAlignment="center"
        android:textColor="@color/sena"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginBottom="30sp"
        app:srcCompat="@drawable/logo_sena" />


    <EditText
        android:id="@+id/editText3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edt_nom"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/edt_celular"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:hint="@string/edt_contraseña"
        android:inputType="text"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/sena"
        android:text="@string/edt_registrarse"
        android:textColorLink="@color/sena" />
</LinearLayout>